article width seeks 50rem for content; urls no longer overflow pages

--- a/src/routes/+layout.scss
+++ b/src/routes/+layout.scss
@@ -42,26 +42,8 @@ ul {
 	margin-inline-end: 0px;
 	padding-inline-start: 40px;
 }
-#featured-img, .background-img {
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	overflow: hidden;
-	&:before {
-		content: "";
-    position: absolute;
-		z-index: -1;
-		top: 0;
-    width: 100%;
-		height: 100%;
-		background-image: url('$imgs/default-background.jpg');
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
-		filter: brightness(80%) blur(2px);
-	}
+a {
+	overflow-wrap: break-word;
 }
 p {
 	margin-block-start: 1em;
@@ -84,4 +66,25 @@ h6 {
 }
 code {
 	font-family: monospace;
+}
+#featured-img, .background-img {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	overflow: hidden;
+	&:before {
+		content: "";
+    position: absolute;
+		z-index: -1;
+		top: 0;
+    width: 100%;
+		height: 100%;
+		background-image: url('$imgs/default-background.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		filter: brightness(80%) blur(2px);
+	}
 }
